Updated line height to fix on mobile

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -53,7 +53,7 @@ a {
 }
 
 #post-text {
-    line-height: 15px;
+    line-height: 22px;
 }
 
 .comment {
